--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "tech-tools",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.12.2",
-    "@mantine/hooks": "^7.12.2",
-    "@tabler/icons-react": "^3.16.0",
-    "next": "14.2.11",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "zxcvbn": "^4.4.2"
-  },
-  "devDependencies": {
-    "@types/node": "20.16.5",
-    "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.11",
-    "postcss": "^8.4.45",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "typescript": "5.6.2"
-  },
-  "packageManager": "yarn@4.4.1"
+	"name": "tech-tools",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "npx prettier --write ."
+	},
+	"dependencies": {
+		"@mantine/core": "^7.12.2",
+		"@mantine/hooks": "^7.12.2",
+		"@tabler/icons-react": "^3.16.0",
+		"next": "14.2.11",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"zxcvbn": "^4.4.2"
+	},
+	"devDependencies": {
+		"@types/node": "20.16.5",
+		"@types/react": "18.3.5",
+		"@types/react-dom": "18.3.0",
+		"eslint": "8.57.0",
+		"eslint-config-next": "14.2.11",
+		"postcss": "^8.4.45",
+		"postcss-preset-mantine": "^1.17.0",
+		"postcss-simple-vars": "^7.0.1",
+		"typescript": "5.6.2"
+	},
+	"packageManager": "yarn@4.4.1"
 }
