--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tabler/icons-react": "^3.16.0",
 		"color-convert": "^2.0.1",
 		"composerize": "^1.6.10",
+		"mime-types": "^2.1.35",
 		"next": "14.2.13",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
